(fix): change the md url

--- a/static/demo/test/index.html
+++ b/static/demo/test/index.html
@@ -293,7 +293,7 @@
         </div>
 
         <div class="status-bar">
-            <span id="chapterInfo">第 1 章 / 共 3 章</span>
+            <span id="chapterInfo">第 1 章 / 共 1 章</span>
         </div>
 
         <div class="bottom-bar">
@@ -308,7 +308,7 @@
             const chapters = [
                 {
                     title: "生日感想",
-                    url: "//demo/test/test.md",
+                    url: "/demo/test/test.md",
                 },
             ];
 
